--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,7 @@ a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] { text-dec
 #container { top: 0; width: 100%; z-index: 1; min-height: 90%; }
 
 #myCanvas { z-index: 6; position: fixed; opacity: .2; }
+@media (max-width: 480px) { #myCanvas { display: none; pointer-events: none; } }
 
 #title, #exhibitions { text-align: left; padding-left: 4%; text-decoration: underline; }
 
@@ -189,8 +190,11 @@ a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] { text-dec
 #title { font-size: 3.5em; /*padding-top:10%;*/ display: inline-block; }
 
 #content { text-align: center; margin-bottom: 5%; font-size: 1.5em; }
+#content .list { padding: 0 20px; }
+#content .list .exhib { margin-top: 1em; }
 
 .poster { width: 45%; margin-right: 2.5%; margin-left: 2.5%; }
+@media (max-width: 480px) { .poster { width: 83%; } }
 
 #address { padding: 1%; padding-bottom: 40px; width: 100%; position: static; bottom: 0; text-align: center; font-size: 1em; font-weight: 600; font-family: TimesNewRoman; }
 
@@ -203,3 +207,5 @@ a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] { text-dec
 .exh-title { width: 100%; font-size: 1.2em; text-align: center; margin: 4% 0; }
 
 @media screen and (max-width: 600px) { #address { position: static; } }
+
+/*# sourceMappingURL=styles.css.map */
