--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,8 @@ td, th { padding: 0; }
   to { opacity: 1; } }
 a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] { text-decoration: none; border: 0 none; }
 
+@media (max-width: 480px) { body { background: #f6b5ff; /* Old browsers */ background: -moz-linear-gradient(left, #f6b5ff 0%, #f6b5ff 5%, #f6b5ff 48%, #dde0ff 100%); /* FF3.6-15 */ background: -webkit-linear-gradient(left, #f6b5ff 0%, #f6b5ff 5%, #f6b5ff 48%, #dde0ff 100%); /* Chrome10-25,Safari5.1-6 */ background: linear-gradient(to right, #f6b5ff 0%, #f6b5ff 5%, #f6b5ff 48%, #dde0ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6b5ff', endColorstr='#dde0ff',GradientType=1 ); /* IE6-9 */ } }
+
 @font-face { font-family: Cooper; src: url("../css/webfont/CooperHewitt-Medium.otf") format("opentype"); }
 @font-face { font-family: Iowan; src: url("../css/webfont/bitstream-iowan-old-style-bold-italic-bt.ttf") format("truetype"); }
 .exImage { margin-top: 7px; margin-bottom: 7px; margin-right: 2.5%; margin-left: 2.5%; max-height: 800px; max-width: 55%; }
