--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,4 @@
-@import "compass";
-@import "compass/layout";
-@import "normalize";
-@import "typography";
-@import "mixins";
+
 
 
 
@@ -59,7 +55,7 @@ a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] {
 
 	        }
 
-			
+
 			* {
 
 		        font-family: Iowan,Helvetica Bold;
@@ -118,6 +114,7 @@ a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif] {
 		        font-size: 1em;
 		        font-weight: 600;
 		        font-family: TimesNewRoman;
+						font-family: Helvetica;
 	        }
 	        #aa {
 		        text-decoration: line-through;
