--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -142,6 +142,7 @@ body {
 		        font-size: 1em;
 		        font-weight: 600;
 		        font-family: TimesNewRoman;
+		        font-family: Helvetica;
 
 	        }
 	        #aa {
